Added Swagger Open Api Configuration for the application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=sms-backend
 server.port=8081
+server.servlet.context-path=/sms-backend
+springdoc.swagger-ui.path=/swagger-ui.html
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/studentManagement?createDatabaseIfNotExist=true
