--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,23 @@ server.port=8081
 server.servlet.context-path=/sms-backend
 springdoc.swagger-ui.path=/swagger-ui.html
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/studentManagement?createDatabaseIfNotExist=true
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/ems_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Hibernate Configuration
+#spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
 
 # Disable default schema.sql execution
-#spring.sql.init.mode=never
+spring.sql.init.mode=never
+
+#authorization server configurations
+springdoc.swagger-ui.persist-authorization=true
+#try it out enabled
+springdoc.swagger-ui.try-it-out-enabled=true
